Correction of the javascript import line

--- a/pkg/index.html
+++ b/pkg/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0">
     <link rel="icon" href="favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css">
-    <title>Levenshtein distance -- Demo</title>
+    <title>Seed Web development sample</title>
     <script type="module">
-        import init from '/demo_web.js';
+        import init from '/seed-rs-base.js';
         init();
     </script>
 </head>
