Change filename for wasm file
wasm-pack seems to change the "-" to "_"

--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Seed Web development sample</title>
     <script type="module">
-        import init from '/seed-rs-base.js';
+        import init from '/seed_rs_base.js';
         init();
     </script>
 </head>
